[package]
name = "slackline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
dotenvy = "0.15"
hyper = "1"
hyper-rustls = { version = "0.27", features = ["http2"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "2", features = ["hyper"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"

[patch.crates-io]
slack-morphism = { git = "https://github.com/co42/slack-morphism-rust", rev = "e2d7136" }
