[package]
name = "slackline"
version = "0.6.0"
edition = "2024"
description = "Slack CLI for AI agents"
license = "MIT"
repository = "https://github.com/co42/slackline"
readme = "README.md"
keywords = ["slack", "cli", "api"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
dotenvy = "0.15"
futures = "0.3"
hyper = "1"
hyper-rustls = { version = "0.27", features = ["http2"] }
mime_guess = "2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "2", features = ["hyper"] }
thiserror = "2"
http = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
urlencoding = "2"

[patch.crates-io]
slack-morphism = { git = "https://github.com/co42/slack-morphism-rust", rev = "e2d7136" }
